# movie-db

./: .gitignore  README.md
client/: index.html  package.json  tailwind.config.js  types.ts
client/components/: MovieForm.tsx
client/src/: App.tsx  index.css
data/: preprocess.py
server/: Cargo.toml  config.yaml  database.db
server/src/: config.rs  lib.rs  main.rs  routes.rs  schema.rs  telemetry.rs
server/tests/: crud.rs  health_check.rs
server/tests/common/: migrate.sql  mod.rs
