[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
rand = "0.8.5"
actix-web = "4"
once_cell = "1"
config = "0.14.1"
serde_json = "1.0"
reqwest = "0.12.9"
simsearch = "0.2"
futures = "0.3.31"
actix-cors = "0.7.0"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros"] }